# Akashi-Compliance

./: .env.example  .gitignore  CLAUDE.md  PRODUCT.md  README.md  docker-compose.yml  dockerfile  main.py  project.md  pyproject.toml  streamlit_app.py  test.py
app/: __init__.py  config.py
app/api/: __init__.py
app/core/: auth.py  config.py
app/legacy/: adata.py  audit_services.py  database.py
app/models/: __init__.py  db.py  schemas.py  serializers.py
app/services/: affiliate_tree.py  cache.py  company_display.py  glossary.py  import_parser.py  pipeline.py  (+3 more)
data/: compliance.db
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: _probe_courts.py  migrate_sqlite_to_postgres.py  open-compliance.sh  stop-compliance-tunnel.sh  wc1_deep_screen.py  wc1_profile_detail.py
tests/: conftest.py  test_adata_company_courtcase.py  test_adata_company_detailed_courts.py  test_adata_courtcase.py  test_adata_individual_courts.py  test_adata_info.py  test_adata_info_mapper.py  test_affiliate_tree.py  test_ai_context.py  test_auth.py  test_config.py  test_court_roles.py  test_dossier.py  test_full_report_formatting.py  test_full_report_meta.py  test_import_parser.py  test_individual_courts_resolve.py  test_lookup.py  test_lseg_screening.py  test_node_cache.py  test_osint_mapper.py  test_osint_service.py  test_person_normalize.py  test_queue.py  test_risk_scoring.py  test_sanctions_summary.py  test_upload_duplicates.py
(+84 files in other folders)
