[project]
name = "akashicompliance"
version = "0.1.0"
description = "Compliance workspace with FastAPI, provider architecture, and Next.js UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "langfuse>=3.0.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "pydantic>=2.10.0",
    "python-dotenv>=1.2.2",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "streamlit>=1.57.0",
    "uvicorn>=0.35.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "bcrypt>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
akashicompliance-worker = "app.workers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
